# iconify

./: README.md  iconify.py  pyproject.toml
src/: iconify.py
